@@ -1,3 +1,11 @@
+2003-09-04	Joel Sherrill <joel@OARcorp.com>
+
+	* clock/ckinit.c, console/console.c, consolex/cTest.c,
+	consolex/consolex.c, consolex/consolex.h, include/bsp.h,
+	include/coverhd.h, include/tod.h, startup/bspclean.c,
+	startup/bspstart.c, startup/linkcmds, timer/timer.c,
+	timer/timerisr.S, tod/tod.c: URL for license changed.
+
 2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* Makefile.am: Reflect having moved aclocal/.
